--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
                    <a href="index-/cantact.html">Contact me</a>
                </li>
            </ul>
+           <h3> Top ten places i like to visit</h3>
+           <ol>
+               <li> France</li>
+               <li>Germany</li>
+               <li>Brazil</li>
+               <li>England</li>
+               <li>Japan</li>
+               <li>China</li>
+               <li>UAE</li>
+               <li>USA</li>
+               <li>Canada</li>
+               <li>Rusia</li>
+           </ol>
        </nav>
     </header>
     <main>
@@ -38,6 +51,7 @@
                     variety of electrical engineering disciplines.</p>
             </section>
         </article>
+
 
 
     </main>
